--- a/style.scss
+++ b/style.scss
@@ -106,6 +106,8 @@
     border: 1px solid #00000050;
     border-top: none;
     border-bottom-style: dashed;
+    position: sticky;
+    top:0;
   }
   .schedule thead td:not(:first-child) {
     min-width: 70px;
