--- a/style.scss
+++ b/style.scss
@@ -1,170 +1,190 @@
 :root {
-    font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji",
-      "Segoe UI Symbol";
+  font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji",
+    "Segoe UI Symbol";
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.schedule {
+  --bg: 250, 250, 250;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.schedule td.day {
+  border-bottom: 1px solid gray;
+}
+
+.bg-amber {
+  --bg: 255, 193, 7;
+}
+
+.bg-blue {
+  --bg: 33, 150, 243;
+}
+
+.bg-blue-grey {
+  --bg: 96, 125, 139;
+}
+
+.bg-brown {
+  --bg: 121, 85, 72;
+}
+
+.bg-cyan {
+  --bg: 0, 188, 212;
+}
+
+.bg-deep-orange {
+  --bg: 255, 87, 34;
+}
+
+.bg-deep-purple {
+  --bg: 103, 58, 183;
+}
+
+.bg-green {
+  --bg: 76, 175, 80;
+}
+
+.bg-grey {
+  --bg: 158, 158, 158;
+}
+
+.bg-indigo {
+  --bg: 63, 81, 181;
+}
+
+.bg-light-blue {
+  --bg: 3, 169, 244;
+}
+
+.bg-light-green {
+  --bg: 139, 195, 74;
+}
+
+.bg-lime {
+  --bg: 205, 220, 57;
+}
+
+.bg-orange {
+  --bg: 255, 152, 0;
+}
+
+.bg-pink {
+  --bg: 233, 30, 99;
+}
+
+.bg-purple {
+  --bg: 156, 39, 176;
+}
+
+.bg-red {
+  --bg: 244, 67, 54;
+}
+
+.bg-teal {
+  --bg: 0, 150, 136;
+}
+
+.bg-yellow {
+  --bg: 255, 235, 59;
+}
+
+.schedule>tbody>tr:nth-child(even)>td {
+  background: rgba(var(--bg), 0.4);
+}
+
+.schedule>tbody>tr:nth-child(odd)>td {
+  background: rgba(var(--bg), 0.2);
+}
+
+.schedule>tbody>tr>td:first-child {
+  --bg: 127, 127, 127;
+  text-align: center;
+}
+
+.schedule tbody td {
+  border: 1px solid rgba(0, 0, 0, 0.045);
+}
+
+.schedule thead td {
+  text-align: center;
+  background: #00000017;
+  padding: 5px;
+  border: 1px solid #00000050;
+  border-top: none;
+  border-bottom-style: dashed;
+  position: sticky;
+  top: 0;
+}
+
+.schedule thead td:not(:first-child) {
+  min-width: 70px;
+}
+
+.schedule tbody td>div:first-child {
+  min-height: 40px;
+}
+
+.schedule td button.startEdit {
+  display: none;
+}
+
+.schedule td:hover button.startEdit,
+.schedule td:focus button.startEdit {
+  display: unset;
+}
+
+.schedule thead td:first-child {
+  border-left: none;
+}
+
+.schedule thead td:last-child {
+  border-right: none;
+}
+
+i.icon[class^="bg"] {
+  height: 16px;
+  background: rgb(var(--bg));
+  width: 16px !important;
+  margin-right: 7px;
+}
+
+.comment {
+  border-top: 1px dashed darkgray;
+  opacity: 0.9;
+  background: #efe99e36;
+  overflow: hidden;
+}
+
+.comment p {
+  margin-block-end: 0.5em;
+  margin-block-start: 0.5em;
+}
+
+.schedule {
+
+  .ol,
+  .ul {
+    line-height: 0.75rem;
   }
-  
-  .schedule {
-    --bg: 250, 250, 250;
-    border-collapse: collapse;
-  }
-  .schedule td.day {
-    border-bottom: 1px solid gray;
-  }
-  
-  .bg-amber {
-    --bg: 255, 193, 7;
-  }
-  
-  .bg-blue {
-    --bg: 33, 150, 243;
-  }
-  
-  .bg-blue-grey {
-    --bg: 96, 125, 139;
-  }
-  
-  .bg-brown {
-    --bg: 121, 85, 72;
-  }
-  
-  .bg-cyan {
-    --bg: 0, 188, 212;
-  }
-  
-  .bg-deep-orange {
-    --bg: 255, 87, 34;
-  }
-  
-  .bg-deep-purple {
-    --bg: 103, 58, 183;
-  }
-  
-  .bg-green {
-    --bg: 76, 175, 80;
-  }
-  
-  .bg-grey {
-    --bg: 158, 158, 158;
-  }
-  
-  .bg-indigo {
-    --bg: 63, 81, 181;
-  }
-  
-  .bg-light-blue {
-    --bg: 3, 169, 244;
-  }
-  
-  .bg-light-green {
-    --bg: 139, 195, 74;
-  }
-  
-  .bg-lime {
-    --bg: 205, 220, 57;
-  }
-  
-  .bg-orange {
-    --bg: 255, 152, 0;
-  }
-  
-  .bg-pink {
-    --bg: 233, 30, 99;
-  }
-  
-  .bg-purple {
-    --bg: 156, 39, 176;
-  }
-  
-  .bg-red {
-    --bg: 244, 67, 54;
-  }
-  
-  .bg-teal {
-    --bg: 0, 150, 136;
-  }
-  
-  .bg-yellow {
-    --bg: 255, 235, 59;
-  }
-  
-  .schedule > tbody > tr:nth-child(even) > td {
-    background: rgba(var(--bg), 0.4);
-  }
-  .schedule > tbody > tr:nth-child(odd) > td {
-    background: rgba(var(--bg), 0.2);
-  }
-  .schedule > tbody > tr > td:first-child {
-    --bg: 127, 127, 127;
-    text-align: center;
-  }
-  
-  .schedule thead td {
-    text-align: center;
-    background: #00000017;
-    padding: 5px;
-    border: 1px solid #00000050;
-    border-top: none;
-    border-bottom-style: dashed;
-    position: sticky;
-    top:0;
-  }
-  .schedule thead td:not(:first-child) {
-    min-width: 70px;
-  }
-  
-  .schedule tbody td > div:first-child {
-    min-height: 40px;
-  }
-  
-  .schedule td button.startEdit {
-    display: none;
-  }
-  .schedule td:hover button.startEdit,
-  .schedule td:focus button.startEdit {
-    display: unset;
-  }
-  
-  .schedule thead td:first-child {
-    border-left: none;
-  }
-  
-  .schedule thead td:last-child {
-    border-right: none;
-  }
-  
-  i.icon[class^="bg"] {
-    height: 16px;
-    background: rgb(var(--bg));
-    width: 16px !important;
-    margin-right: 7px;
-  }
-  
-  .comment {
-    border-top: 1px dashed darkgray;
-    opacity: 0.9;
-    background: #efe99e36;
-    overflow: hidden;
-  }
-  .comment p {
+
+  p {
     margin-block-end: 0.5em;
     margin-block-start: 0.5em;
   }
-  .schedule {
-    .ol,
-    .ul {
-      line-height: 0.75rem;
-    }
-    p {
-      margin-block-end: 0.5em;
-      margin-block-start: 0.5em;
-    }
-    h2 {
-      margin-block-start: 0.4em;
-      margin-block-end: 0.4em;
-    }
-    h3 {
-      margin-block-start: 0.2em;
-      margin-block-end: 0.2em;
-    }
+
+  h2 {
+    margin-block-start: 0.4em;
+    margin-block-end: 0.4em;
   }
+
+  h3 {
+    margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
+  }
+}
