--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,11 @@ button.timeChange {
 
 .schedule tbody td>div:nth-child(2) {
   min-height: 40px;
+  max-height: calc(var(--rs) * var(--maxH, 300px));
+  max-width: var(--maxW, 300px);
+  overflow-wrap: break-word;
+  overflow-y: auto;
+  overflow-x: visible;
 }
 
 .schedule td button.startEdit {
