--- a/style.scss
+++ b/style.scss
@@ -172,7 +172,7 @@ button.timeChange {
 .schedule td button.startEdit {
   display: none;
   position: absolute;
-  right: 0;
+  right: 0px;
   top: 0;
 }
 
