--- a/style.scss
+++ b/style.scss
@@ -32,12 +32,21 @@ button.timeChange {
   top: 0px;
 }
 
+.editInfo {
+  display: none;
+  font-size: .7rem;
+}
+
 .schedule td:focus,
 .schedule td:focus-within {
   outline: 2px solid rgba(var(--bg), 0.5);
 
   button.timeChange {
     display: block;
+  }
+  .editInfo {
+    display: block;
+    color: #626262;
   }
 }
 
@@ -153,8 +162,11 @@ button.timeChange {
   border: 1px solid #00000050;
   border-top: none;
   border-bottom-style: dashed;
-  position: sticky;
-  top: 0;
+
+  &:not(:first-child) {
+    position: sticky;
+    top: 0;
+  }
 }
 
 .schedule thead td:not(:first-child) {
