--- a/style.scss
+++ b/style.scss
@@ -17,9 +17,15 @@ h1 {
   border-collapse: collapse;
   border-spacing: 0;
 
-  tr:nth-child(even)>td {
-    --bg: 230, 230, 230;
-    border-bottom-color: #00000026;
+  tr {
+    &:nth-child(even)>td {
+      --bg: 230, 230, 230;
+      border-bottom-color: #00000026;
+    }
+
+    &.mark td {
+      border-bottom-color: #000000a8;
+    }
   }
 }
 
@@ -166,7 +172,6 @@ button.timeChange {
   padding: 5px;
   border: 1px solid #00000050;
   border-top: none;
-  border-bottom-style: dashed;
 
   &:not(:first-child) {
     position: sticky;
