--- a/style.scss
+++ b/style.scss
@@ -20,20 +20,17 @@ h1 {
   tr {
     &:nth-child(even)>td {
       --bg: 230, 230, 230;
-    }
-
-    &:nth-child(odd)>td {
-      border-bottom-color: #00000026;
+      border-top-color: #00000026;
     }
 
     &.mark td {
-      border-bottom-color: #000000a8;
+      border-top-color: #000000a8;
     }
   }
 }
 
-.schedule td.day {
-  border-bottom: 1px solid gray;
+.schedule tbody tr:first-child td {
+  border-top: 1px solid gray;
 }
 
 button.timeChange {
@@ -166,6 +163,7 @@ button.timeChange {
 
 .schedule tbody td {
   border: 1px solid rgba(0, 0, 0, 0.045);
+  border-bottom: 0;
   vertical-align: top;
 }
 
