--- a/style.scss
+++ b/style.scss
@@ -299,10 +299,11 @@ button.timeChange {
   right: 5px;
   top: 5px;
   cursor: pointer;
-  background: #00000011;
+  background: #d7e3c7;
   border-radius: 2px;
   font-size: 20px;
   padding: 5px;
+  z-index: 10;
 }
 
 .lock {
